--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Formatting may be inconsistent from source
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <title>Minecraft Layer Viewer</title>
+    <title>Minecraft Layer Viewer⚒️</title>
     
     <link rel="icon" type="image/png" href="/skin-avatar.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
