--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <title>Admin - Minecraft Layer Viewer</title>
+    <title>Admin - Minecraft Layer Viewer😊</title>
     
     <link rel="icon" type="image/png" href="/skin-avatar.png">
     
